syntax = "proto3";

package common;
option go_package = "github.com/jonashiltl/sessions-backend/packages/grpc/common";

message MessageResponse {
    string message = 1;
}

message Empty {

}